# apphash-updater

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/app/: config.py  constants.py  helpers.py  main.py  updater.py
