[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wonderhoy-apphash-updater"
version = "0.1.0"
description = "Hosted API for Project Sekai app hash extraction by region"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "aiohttp>=3.11.0",
    "beautifulsoup4>=4.13.0",
    "unitypy>=1.22.2",
]

[project.scripts]
wonderhoy = "app.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["F", "W", "E", "I", "UP", "ASYNC", "C4", "T10", "T20", "Q", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]
